ctre-phoenix6-sys/src/bindings.rs

extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_VelocityVoltage_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Velocity: f64,
        AverageRequest_Acceleration: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_MotionMagicVoltage_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_TorqueCurrentFOC_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Output: f64,
        AverageRequest_MaxAbsDutyCycle: f64,
        AverageRequest_Deadband: f64,
        AverageRequest_OverrideCoastDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideCoastDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_PositionTorqueCurrentFOC_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_Velocity: f64,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideCoastDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideCoastDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_VelocityTorqueCurrentFOC_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Velocity: f64,
        AverageRequest_Acceleration: f64,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideCoastDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideCoastDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_MotionMagicTorqueCurrentFOC_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideCoastDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideCoastDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_TorqueCurrentFOC_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Output: f64,
        AverageRequest_MaxAbsDutyCycle: f64,
        AverageRequest_Deadband: f64,
        AverageRequest_OverrideCoastDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideCoastDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_PositionTorqueCurrentFOC_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_Velocity: f64,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideCoastDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideCoastDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_VelocityTorqueCurrentFOC_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Velocity: f64,
        AverageRequest_Acceleration: f64,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideCoastDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideCoastDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_MotionMagicTorqueCurrentFOC_Velocity(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideCoastDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_Acceleration: f64,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideCoastDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _return_values_t {
    pub outValue: f64,
    pub units: *const ::std::os::raw::c_char,
    pub hwtimestampSeconds: f64,
    pub swtimestampSeconds: f64,
    pub ecutimestampSeconds: f64,
    pub error: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout__return_values_t() {
    const UNINIT: ::std::mem::MaybeUninit<_return_values_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<_return_values_t>(),
        48usize,
        concat!("Size of: ", stringify!(_return_values_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_return_values_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_return_values_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).outValue) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_return_values_t),
            "::",
            stringify!(outValue)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).units) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_return_values_t),
            "::",
            stringify!(units)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hwtimestampSeconds) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_return_values_t),
            "::",
            stringify!(hwtimestampSeconds)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).swtimestampSeconds) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_return_values_t),
            "::",
            stringify!(swtimestampSeconds)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ecutimestampSeconds) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_return_values_t),
            "::",
            stringify!(ecutimestampSeconds)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).error) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(_return_values_t),
            "::",
            stringify!(error)
        )
    );
}
pub type return_values_t = _return_values_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _signal_values_t {
    pub deviceHash: u32,
    pub spn: u32,
}
